// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description changes to prop when passed 1`] = `
<div>
  Celiac kitsch poutine, tacos stumptown cardigan jianbing pug pickled kinfolk try-hard put a bird on it air plant activated charcoal. Swag kinfolk marfa cornhole, ennui try-hard narwhal blue bottle forage gastropub schlitz keytar. Bicycle rights schlitz farm-to-table woke biodiesel, shoreditch scenester four dollar toast fashion axe heirloom godard tbh DIY skateboard. Offal cliche hashtag franzen asymmetrical art party.
</div>
`;

exports[`Name changes to prop when passed 1`] = `
<div
  style={
    Object {
      "float": "left",
      "fontSize": "0.75em",
      "paddingTop": "25px",
    }
  }
>
  Jamie
</div>
`;

exports[`Title changes to prop when passed 1`] = `
<div
  style={
    Object {
      "fontSize": "1.5em",
    }
  }
>
  Doing Big Things
</div>
`;
